--- a/index.html
+++ b/index.html
@@ -19,14 +19,20 @@
                 <span class="studio-logo">Studio</span>
             </a>
                <ul class="menu-nav">
-                    <li class="menu-nav-text"><a href="/" class="nav-link-f">Студия</a></li>
+                    <li class="menu-nav-text"><a href="/" class="nav-link-f"> Студия</a></li>
                     <li class="menu-nav-text"><a href="./portfolio.html" class="nav-link">Портфолио</a></li>
                     <li class="menu-nav-text"><a href="" class="nav-link">Контакты</a></li>
               </ul>
           </nav>
     
           <ul class="menu-addres">
-               <li class="menu-addres-text"><a href="mailto:info@devstudio.com" class="address-link">info@devstudio.com</a></li>
+               <li class="menu-addres-text">
+                   <a href="mailto:info@devstudio.com" class="address-link">
+                      <svg width="16" height="12" class="mail-icon">
+                          <use href="./img/icons.svg#icon-mail"></use>
+                     </svg>info@devstudio.com 
+                    </a>
+                </li>
                <li class="menu-addres-text"><a href="tel:+380961111111" class="address-link">+38 096 111 11 11</a></li>
           </ul> 
        </div>
