--- a/index.html
+++ b/index.html
@@ -28,12 +28,18 @@
           <ul class="menu-addres">
                <li class="menu-addres-text">
                    <a href="mailto:info@devstudio.com" class="address-link">
-                      <svg width="16" height="12" class="mail-icon">
-                          <use href="./img/icons.svg#icon-mail"></use>
+                      <svg width="16" height="12" class="address-link-icon">
+                          <use href="./images/icons.svg#icon-mail"></use>
                      </svg>info@devstudio.com 
                     </a>
                 </li>
-               <li class="menu-addres-text"><a href="tel:+380961111111" class="address-link">+38 096 111 11 11</a></li>
+               <li class="menu-addres-text">
+                   <a href="tel:+380961111111" class="address-link">
+                      <svg width="10" height="16" class="address-link-icon">
+                          <use href="./images/icons.svg#icon-mobile"></use>
+                      </svg>+38 096 111 11 11
+                    </a>
+                </li>
           </ul> 
        </div>
        
@@ -55,24 +61,44 @@
             <div class="container">
                 <ul class="details">
                     <li class="details-list">
+                        <div>
+                            <svg class="icon-menu">
+                                <use href="./images/icons.svg#icon-group-1"></use>
+                            </svg>
+                        </div>
                         <h3>ВНИМАНИЕ К ДЕТАЛЯМ</h3>
                         <p>
                             Идейные соображения, а также начало повседневной работы по формированию позиции.
                         </p>
                     </li>
                     <li class="details-list">
+                        <div>
+                            <svg class="icon-menu">
+                                <use href="./images/icons.svg#icon-group-2"></use>
+                            </svg>
+                        </div>
                         <h3>ПУНКТУАЛЬНОСТЬ</h3>
                         <p>
                             Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
                         </p>
                     </li>
                     <li class="details-list">
+                        <div>
+                            <svg class="icon-menu">
+                                <use href="./images/icons.svg#icon-group-3"></use>
+                            </svg>
+                        </div>
                         <h3>ПЛАНИРОВАНИЕ</h3>
                         <p>
                             Равным образом консультация с широким активом в значительной степени обуславливает..
                         </p>
                     </li>
                     <li class="details-list">
+                        <div>
+                            <svg class="icon-menu">
+                                <use href="./images/icons.svg#icon-group-4"></use>
+                            </svg>
+                        </div>
                         <h3>СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
                         <p>
                             Значимость этих проблем настолько очевидна, что реализация плановых заданий.
@@ -113,17 +139,51 @@
                 </h2>
                 <ul class="team-list">
                     <li class="team-detail">
-                       <img src="./images/ihor.jpg" 
-                       alt="Игорь Демьяненко" 
-                       width="270">
-                       <div class="team-name">
-                          <h3>
-                            Игорь Демьяненко
-                          </h3>
-                          <p lang="en">
-                         Product Designer
-                          </p>
-                        </div>
+                       <ul class="team-details-list">
+                           <li>
+                            <img src="./images/ihor.jpg" alt="Игорь Демьяненко" width="270">
+                            <div class="team-name">
+                                <h3>
+                                    Игорь Демьяненко
+                                </h3>
+                                <p lang="en">
+                                    Product Designer
+                                </p>
+                            </div>
+                           </li>
+                           <li>
+                               <ul class="social-icons">
+                                   <li>
+                                       <a href="" class="soc-link">
+                                        <svg width="44" height="44" class="team-icon">
+                                            <use href="./images/icons.svg#icon-ellipse-3"></use>
+                                        </svg>
+                                       </a>
+                                   </li>
+                                   <li>
+                                        <a href="" class="soc-link">
+                                            <svg width="44" height="44" class="team-icon">
+                                                <use href="./images/icons.svg#icon-ellipse"></use>
+                                            </svg>
+                                        </a>
+                                   </li>
+                                   <li>
+                                      <a href="" class="soc-link">
+                                        <svg width="44" height="44" class="team-icon">
+                                            <use href="./images/icons.svg#icon-ellipse-1"></use>
+                                        </svg>
+                                      </a>
+                                   </li>
+                                   <li>
+                                      <a href="" class="soc-link">
+                                        <svg width="44" height="44" class="team-icon">
+                                            <use href="./images/icons.svg#icon-ellipse-2"></use>
+                                        </svg>
+                                      </a>
+                                   </li>
+                               </ul>
+                           </li>
+                       </ul>
                     </li>
                     <li class="team-detail">
                         <img src="./images/olga.jpg" 
